deploy/fileservice.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileservice
  template:
    metadata:
      labels:
        app: fileservice
    spec:
      containers:
      - name: fileservice
        image: fileservice:latest
        imagePullPolicy: IfNotPresent  # This line is important
        ports:
        - containerPort: 80
